manifests/monitoring/elasticsearch/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: monitoring
  labels:
    app: elasticsearch
spec:
  template:
    metadata:
      labels:
        app: elasticsearch
      annotations:
        pod.alpha.kubernetes.io/init-containers: >
          [{
            "name": "sysctl",
              "image": "busybox",
              "imagePullPolicy": "IfNotPresent",
              "command": ["sysctl", "-w", "vm.max_map_count=262144"],
              "securityContext": {
                "privileged": true
              }
            }
          ]
        scheduler.alpha.kubernetes.io/affinity: >
          {
            "nodeAffinity": {
              "requiredDuringSchedulingIgnoredDuringExecution": {
                "nodeSelectorTerms": [
                  {
                    "matchExpressions": [
                      {
                        "key": "affinity/elasticsearch",
                        "operator": "In",
                        "values": ["true"]
                      }
                    ]
                  }
                ]
              }
            }
          }
    spec:
      containers:
      - name: elasticsearch
        image: elasticsearch:5.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9200
          name: api
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config
        - name: data
          mountPath: /usr/share/elasticsearch/data
        - name: snapshots
          mountPath: /mnt/snapshots
          #^ chown -R elasticsearch:elasticsearch /mnt/snapshots/
          # FIXME create init-container for this
      volumes:
      - name: config
        configMap:
          name: elasticsearch
      - name: data
        hostPath:
          path: /srv/elasticsearch-data
      - name: snapshots
        hostPath:
          path: /srv/elasticsearch-snapshots
