manifests/monitoring/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: monitoring
  labels:
    app: elasticsearch
    component: service
spec:
  ports:
  - port: 9200
    protocol: TCP
    # targetPort: api
    targetPort: 9200
  selector:
    app: elasticsearch
    component: service
